indicator 통신단 dps 통신단 수정

--- a/WATA.LIS/Modules/WATA.LIS.IF.BE/Views/BackEnd.xaml
+++ b/WATA.LIS/Modules/WATA.LIS.IF.BE/Views/BackEnd.xaml
@@ -79,7 +79,7 @@
                     </LinearGradientBrush>
                 </TabControl.Background>
                 <TabItem Header="Action Log" HorizontalAlignment="Left" VerticalAlignment="Top" Background="#00000000">
-                    <ListBox Background="DarkGray" ItemsSource="{Binding ListBackEndLog}" ItemTemplate="{DynamicResource DataTemplate1}"  lb:ListBoxBehavior.ScrollOnNewItem="True"  ScrollViewer.HorizontalScrollBarVisibility="Auto">
+                    <ListBox Background="DarkGray" ItemsSource="{Binding ListBackEndLog}" ItemTemplate="{DynamicResource DataTemplate1}"  lb:ListBoxBehavior.ScrollOnNewItem="True"  ScrollViewer.HorizontalScrollBarVisibility="Auto" d:ItemsSource="{d:SampleData ItemCount=5}">
                     </ListBox>
                 </TabItem>
             </TabControl>
