--- a/WATA.LIS/Modules/WATA.LIS.Main/Views/BottomBarUI.xaml
+++ b/WATA.LIS/Modules/WATA.LIS.Main/Views/BottomBarUI.xaml
@@ -8,72 +8,114 @@
              xmlns:prism="http://prismlibrary.com/"
              prism:ViewModelLocator.AutoWireViewModel="True"
              d:DesignHeight="100" d:DesignWidth="1280">
-            
-    <Grid Background="#FF75002A">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1.*"></ColumnDefinition>
-            <ColumnDefinition Width="1.*"></ColumnDefinition>
-            <ColumnDefinition Width="1.*"></ColumnDefinition>
-            <ColumnDefinition Width="1.*"></ColumnDefinition>
-            <ColumnDefinition Width="1.*"></ColumnDefinition>
-            <ColumnDefinition Width="1.*"></ColumnDefinition>
 
-        </Grid.ColumnDefinitions>
-        <Grid.Resources>
-            <Style TargetType="RadioButton" BasedOn="{StaticResource MenuButton2}" />
-            <Style TargetType="TextBlock">
-                <Style.Setters>
-                    <Setter Property="Foreground" Value="#FFDADADA"/>
-                    <Setter Property="VerticalAlignment" Value="Center"/>
-                    <Setter Property="HorizontalAlignment" Value="Center"/>
-                    <Setter Property="FontSize" Value="30"/>
-                    <Setter Property="FontWeight" Value="Bold"/>
-                    <Setter Property="Margin" Value="20,0,0,0"/>
-                </Style.Setters>
-            </Style>
-        </Grid.Resources>
-        <Grid Grid.Column="0">
-            <RadioButton IsChecked="{Binding MainChecked}" Command="{Binding MenuSelectButton}" CommandParameter="Content_Main" Cursor="Hand">
-                <TextBlock
+    <Grid Background="#FF75002A" >
+
+        <Grid  Visibility="{Binding DPSVisible}">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1.*"></ColumnDefinition>
+
+            </Grid.ColumnDefinitions>
+            <Grid.Resources>
+                <Style TargetType="RadioButton" BasedOn="{StaticResource MenuButton2}" />
+                <Style TargetType="TextBlock">
+                    <Style.Setters>
+                        <Setter Property="Foreground" Value="#FFDADADA"/>
+                        <Setter Property="VerticalAlignment" Value="Center"/>
+                        <Setter Property="HorizontalAlignment" Value="Center"/>
+                        <Setter Property="FontSize" Value="30"/>
+                        <Setter Property="FontWeight" Value="Bold"/>
+                        <Setter Property="Margin" Value="20,0,0,0"/>
+                    </Style.Setters>
+                </Style>
+            </Grid.Resources>
+            <Grid Grid.Column="0">
+                <RadioButton IsChecked="{Binding DPSChecked}" Command="{Binding MenuSelectButton}" CommandParameter="Content_DPS" Cursor="Hand">
+                    <TextBlock
+                    Text="DPS"
+                    Width="Auto"/>
+                </RadioButton>
+            </Grid>
+        </Grid>
+
+        <Grid  Visibility="{Binding ForkLiftVisible}">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1.*"></ColumnDefinition>
+                <ColumnDefinition Width="1.*"></ColumnDefinition>
+                <ColumnDefinition Width="1.*"></ColumnDefinition>
+                <ColumnDefinition Width="1*"></ColumnDefinition>
+                <ColumnDefinition Width="1.*"></ColumnDefinition>
+                <ColumnDefinition Width="1.*"></ColumnDefinition>
+                <ColumnDefinition Width="1.*"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <Grid.Resources>
+                <Style TargetType="RadioButton" BasedOn="{StaticResource MenuButton2}" />
+                <Style TargetType="TextBlock">
+                    <Style.Setters>
+                        <Setter Property="Foreground" Value="#FFDADADA"/>
+                        <Setter Property="VerticalAlignment" Value="Center"/>
+                        <Setter Property="HorizontalAlignment" Value="Center"/>
+                        <Setter Property="FontSize" Value="30"/>
+                        <Setter Property="FontWeight" Value="Bold"/>
+                        <Setter Property="Margin" Value="20,0,0,0"/>
+                    </Style.Setters>
+                </Style>
+            </Grid.Resources>
+            <Grid Grid.Column="0">
+                <RadioButton IsChecked="{Binding MainChecked}" Command="{Binding MenuSelectButton}" CommandParameter="Content_Main" Cursor="Hand">
+                    <TextBlock
                     Text="Main"
                     Width="Auto"/>
-            </RadioButton>
-        </Grid>
-        <Grid Grid.Column="1">
-            <RadioButton IsChecked="{Binding RFIDChecked}" Command="{Binding MenuSelectButton}" CommandParameter="Content_RFID" Cursor="Hand">
-                <TextBlock
+                </RadioButton>
+            </Grid>
+            <Grid Grid.Column="1">
+                <RadioButton IsChecked="{Binding RFIDChecked}" Command="{Binding MenuSelectButton}" CommandParameter="Content_RFID" Cursor="Hand">
+                    <TextBlock
                     Text="UHF RFID"
                     Width="Auto"/>
-            </RadioButton>
-        </Grid>
-        <Grid Grid.Column="2">
-            <RadioButton IsChecked="{Binding WeightChecked}" Command="{Binding MenuSelectButton}" CommandParameter="Content_Weight" Cursor="Hand">
-                <TextBlock
+                </RadioButton>
+            </Grid>
+            <Grid Grid.Column="2">
+                <RadioButton IsChecked="{Binding WeightChecked}" Command="{Binding MenuSelectButton}" CommandParameter="Content_Weight" Cursor="Hand">
+                    <TextBlock
                     Text="WEIGHT"
                     Width="Auto"/>
-            </RadioButton>
-        </Grid>
-        <Grid Grid.Column="3">
-            <RadioButton IsChecked="{Binding DistanceChecked}" Command="{Binding MenuSelectButton}" CommandParameter="Content_Distance" Cursor="Hand">
-                <TextBlock
+                </RadioButton>
+            </Grid>
+            <Grid Grid.Column="3">
+                <RadioButton IsChecked="{Binding DistanceChecked}" Command="{Binding MenuSelectButton}" CommandParameter="Content_Distance" Cursor="Hand">
+                    <TextBlock
                     Text="DISTANCE"
                     Width="Auto"/>
-            </RadioButton>
-        </Grid>
-        <Grid Grid.Column="4">
-            <RadioButton IsChecked="{Binding CameraChecked}" Command="{Binding MenuSelectButton}" CommandParameter="Content_Camera" Cursor="Hand">
-                <TextBlock
+                </RadioButton>
+            </Grid>
+            <Grid Grid.Column="4">
+                <RadioButton IsChecked="{Binding CameraChecked}" Command="{Binding MenuSelectButton}" CommandParameter="Content_Camera" Cursor="Hand">
+                    <TextBlock
                     Text="CAMERA"
                     Width="Auto"/>
-            </RadioButton>
-        </Grid>
-        <Grid Grid.Column="5">
-            <RadioButton IsChecked="{Binding BackEndChecked}" Command="{Binding MenuSelectButton}" CommandParameter="Content_BackEnd" Cursor="Hand">
-                <TextBlock
+                </RadioButton>
+            </Grid>
+            <Grid Grid.Column="5">
+                <RadioButton IsChecked="{Binding BackEndChecked}" Command="{Binding MenuSelectButton}" CommandParameter="Content_BackEnd" Cursor="Hand">
+                    <TextBlock
                     Text="BACK END"
                     Width="Auto"/>
-            </RadioButton>
+                </RadioButton>
+            </Grid>
+
+            <Grid Grid.Column="6">
+                <RadioButton IsChecked="{Binding IndicatorChecked}" Command="{Binding MenuSelectButton}" CommandParameter="Content_Indicator" Cursor="Hand">
+                    <TextBlock
+                    Text="DISPLAY"
+                    Width="Auto"/>
+                </RadioButton>
+            </Grid>
+
+
+
         </Grid>
 
+      
     </Grid>
 </UserControl>
