--- a/WATA.LIS/Modules/WATA.LIS.SENSOR.WEIGHT/Views/WeightView.xaml
+++ b/WATA.LIS/Modules/WATA.LIS.SENSOR.WEIGHT/Views/WeightView.xaml
@@ -28,12 +28,26 @@
     <Grid Background="#FFDADADA">
         <Grid.RowDefinitions>
             <RowDefinition Height="70"></RowDefinition>
+            <RowDefinition Height="100"></RowDefinition>
             <RowDefinition Height="1.*"></RowDefinition>
         </Grid.RowDefinitions>
         <Grid Grid.Row="0">
             <Label Content="Weight" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="40" FontWeight="Bold"></Label>
         </Grid>
         <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="200"></ColumnDefinition>
+                <ColumnDefinition Width="200"></ColumnDefinition>
+                <ColumnDefinition Width="200"></ColumnDefinition>
+
+            </Grid.ColumnDefinitions>
+
+            <Button Command="{Binding ButtonFunc}" CommandParameter="ReadWeight"  Grid.Column="0" Grid.Row="0" Width="180"  Content="ReadWeight" Style="{StaticResource ButtonStyle1}"  BorderThickness="2" HorizontalAlignment="Left"   />
+            <Button Command="{Binding ButtonFunc}" CommandParameter="SendZeroSet" Grid.Column="1" Grid.Row="0" Width="180"  Content="SendZeroSet" Style="{StaticResource ButtonStyle1}"  BorderThickness="2" HorizontalAlignment="Left"   />
+            <Button Command="{Binding ButtonFunc}" CommandParameter="SendASCII"  Grid.Column="2" Grid.Row="0" Width="180"  Content="SendASCII" Style="{StaticResource ButtonStyle1}"  BorderThickness="2" HorizontalAlignment="Left"   />
+            
+        </Grid>
+        <Grid Grid.Row="2">
 
             <Grid Grid.Column="0">
                 <TabControl BorderBrush="White" BorderThickness="1" FontSize="16" FontWeight="Bold" FontFamily="맑은고딕" Margin="5">
@@ -44,7 +58,7 @@
                         </LinearGradientBrush>
                     </TabControl.Background>
                     <TabItem Header="Log" HorizontalAlignment="Left" VerticalAlignment="Top" Background="#00000000">
-                        <ListBox Background="DarkGray" ItemsSource="{Binding ListWeightLog}" ItemTemplate="{DynamicResource DataTemplate1}"  lb:ListBoxBehavior.ScrollOnNewItem="True" >
+                        <ListBox ScrollViewer.HorizontalScrollBarVisibility="Auto" Background="DarkGray" ItemsSource="{Binding ListWeightLog}" ItemTemplate="{DynamicResource DataTemplate1}"  lb:ListBoxBehavior.ScrollOnNewItem="True" >
                         </ListBox>
                     </TabItem>
                 </TabControl>
