--- a/WATA.LIS/Modules/WATA.LIS.IF.BE/Views/BackEnd.xaml
+++ b/WATA.LIS/Modules/WATA.LIS.IF.BE/Views/BackEnd.xaml
@@ -37,8 +37,8 @@
             <Label Content="BeckEnd Platform" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="10" FontWeight="Bold"></Label>
         </Grid>
         <Grid Grid.Row="1">
-            <Button Command="{Binding ButtonFunc}" CommandParameter="ActionIN" Grid.Column="0" Grid.Row="0" Width="144"  Content="Action IN" Style="{StaticResource ButtonStyle1}"  BorderThickness="2" HorizontalAlignment="Left"   />
-            <Button Command="{Binding ButtonFunc}" CommandParameter="ActionOUT" Grid.Column="0" Grid.Row="0" Width="144"  Content="Action OUT" Style="{StaticResource ButtonStyle1}"  BorderThickness="2" HorizontalAlignment="Left" Margin="144,0,0,0"   />
+            <Button Command="{Binding ButtonFunc}" CommandParameter="ActionIN" Grid.Column="0" Grid.Row="0" Width="144"  Content="4. Action IN" Style="{StaticResource ButtonStyle1}"  BorderThickness="2" HorizontalAlignment="Left"   />
+            <Button Command="{Binding ButtonFunc}" CommandParameter="ActionOUT" Grid.Column="0" Grid.Row="0" Width="144"  Content="3. Action OUT" Style="{StaticResource ButtonStyle1}"  BorderThickness="2" HorizontalAlignment="Left" Margin="144,0,0,0"   />
             <Label Content="TAG" VerticalAlignment="Center" HorizontalAlignment="Left" FontSize="20" FontWeight="Bold" Margin="328,0,0,0"></Label>
             <TextBox HorizontalAlignment="Left" Margin="385,27,0,0" TextWrapping="Wrap" Text="{Binding TagInfo}" VerticalAlignment="Top" Width="268"/>
             <Label Content="Distance(mm)" VerticalAlignment="Center" HorizontalAlignment="Left" FontSize="20" FontWeight="Bold" Margin="668,0,0,0"></Label>
@@ -46,8 +46,8 @@
         </Grid>
 
         <Grid Grid.Row="2">
-            <Button Command="{Binding ButtonFunc}" CommandParameter="F_IN" Grid.Column="0" Grid.Row="0" Width="144"  Content="F Action IN" Style="{StaticResource ButtonStyle1}"  BorderThickness="2" HorizontalAlignment="Left"   />
-            <Button Command="{Binding ButtonFunc}" CommandParameter="F_OUT" Grid.Column="0" Grid.Row="0" Width="144"  Content="F Action OUT" Style="{StaticResource ButtonStyle1}"  BorderThickness="2" HorizontalAlignment="Left" Margin="144,0,0,0"   />
+            <Button Command="{Binding ButtonFunc}" CommandParameter="F_IN" Grid.Column="0" Grid.Row="0" Width="144"  Content="2. F Action IN" Style="{StaticResource ButtonStyle1}"  BorderThickness="2" HorizontalAlignment="Left"   />
+            <Button Command="{Binding ButtonFunc}" CommandParameter="F_OUT" Grid.Column="0" Grid.Row="0" Width="144"  Content="1. F Action OUT" Style="{StaticResource ButtonStyle1}"  BorderThickness="2" HorizontalAlignment="Left" Margin="144,0,0,0"   />
             <Label Content="Load ID" VerticalAlignment="Center" HorizontalAlignment="Left" FontSize="20" FontWeight="Bold" Margin="668,0,0,0"></Label>
             <TextBox HorizontalAlignment="Left" Margin="813,0,0,0" TextWrapping="Wrap" Text="{Binding QRLoadID}" VerticalAlignment="Center" Width="268"/>
 
@@ -58,12 +58,15 @@
         <Grid Grid.Row="3">
             <Button Command="{Binding ButtonFunc}" CommandParameter="Get" Grid.Column="0" Grid.Row="0" Width="144"  Content="Alive" Style="{StaticResource ButtonStyle1}"  BorderThickness="2" HorizontalAlignment="Left"   />
             <Button Command="{Binding ButtonFunc}" CommandParameter="Location" Grid.Column="0" Grid.Row="0" Width="144"  Content="Location" Style="{StaticResource ButtonStyle1}"  BorderThickness="2" HorizontalAlignment="Left" Margin="144,0,0,0"/>
+            
+            <Label Content="QR" VerticalAlignment="Center" HorizontalAlignment="Left" FontSize="20" FontWeight="Bold" Margin="328,0,0,0"></Label>
+            <TextBox HorizontalAlignment="Left" Margin="385,27,0,0" TextWrapping="Wrap" Text="{Binding QRInfo}" VerticalAlignment="Top" Width="268"/>
+
+            <Button Command="{Binding ButtonFunc}" CommandParameter="Container_Send" Grid.Column="0" Grid.Row="0" Width="144"  Content="Container" Style="{StaticResource ButtonStyle1}"  BorderThickness="2" HorizontalAlignment="Left" Margin="700,0,0,0"/>
+
         </Grid>
 
-        <Grid Grid.Row="4">
-            <Button Command="{Binding ButtonFunc}" CommandParameter="GateIN" Grid.Column="0" Grid.Row="0" Width="144"  Content="Gate IN" Style="{StaticResource ButtonStyle1}"  BorderThickness="2" HorizontalAlignment="Left"   />
-            <Button Command="{Binding ButtonFunc}" CommandParameter="GateOUT" Grid.Column="0" Grid.Row="0" Width="144"  Content="Gate Out" Style="{StaticResource ButtonStyle1}"  BorderThickness="2" HorizontalAlignment="Left" Margin="144,0,0,0"/>
-        </Grid>
+ 
 
         <Grid Grid.Row="5">
             <Grid.ColumnDefinitions>
