--- a/WATA.LIS/Modules/WATA.LIS.Main/Views/BottomBarUI.xaml
+++ b/WATA.LIS/Modules/WATA.LIS.Main/Views/BottomBarUI.xaml
@@ -47,6 +47,7 @@
                 <ColumnDefinition Width="1.*"></ColumnDefinition>
                 <ColumnDefinition Width="1.*"></ColumnDefinition>
                 <ColumnDefinition Width="1.*"></ColumnDefinition>
+                <ColumnDefinition Width="1.*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
             <Grid.Resources>
                 <Style TargetType="RadioButton" BasedOn="{StaticResource MenuButton2}" />
